<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCityActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/city_name"/>
        <EditText
            android:id="@+id/cityNameEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_name"
            android:layout_marginLeft="@dimen/marginleft10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/city_population"/>
        <EditText
            android:id="@+id/populationEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_population"
            android:layout_marginLeft="@dimen/marginleft10"
            android:inputType="number"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/city_country"/>
        <EditText
            android:id="@+id/countryEditTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city_country"
            android:layout_marginLeft="@dimen/marginleft10"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin30">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titleSize"
            android:text="@string/is_visited"/>
        <CheckBox
            android:id="@+id/isVisitedCheckBoxID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginleft10"/>
    </LinearLayout>

    <Button
        android:id="@+id/addNewCityButtonID2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_city"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>